--- a/RNBootCamp/package.json
+++ b/RNBootCamp/package.json
@@ -52,6 +52,7 @@
     "react-native-view-shot": "^3.8.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "toggle-switch-react-native": "^3.3.0",
     "yup": "^1.4.0"
   },
